@@ -7,6 +7,7 @@ Agregada conversión de archivos ZX81 P a P81, y P81 a P
 Agregadas funciones directas para aumentar/reducir el Volumen del Sonido
 Permitir grabar pantalla de ZX80/81 a archivo .scr
 Permitir grabar una nota de texto en un snapshot ZSF
+Permitir encontrar archivos de rom al ejecutar ZEsarUX desde una carpeta actual diferente de la ruta de las roms
 
 * Mejoras:
 
