@@ -30662,11 +30662,7 @@ void menu_about_running_info(MENU_ITEM_PARAMETERS)
 	menu_generic_message_format("Running info",
 		"Video Driver: %s\nAvailable video drivers: %s\n\nAudio Driver: %s\nAvailable audio drivers: %s\n\n"
 		"Current directory: %s\n\n"
-
-#if defined(__APPLE__)
 		"Executable path: %s\n\n"
-#endif
-
         "OS: %s\n"
 		"Start time: %s\n"
 		"Uptime %d secs (%d mins)\n"
@@ -30675,11 +30671,7 @@ void menu_about_running_info(MENU_ITEM_PARAMETERS)
 		,
 		scr_new_driver_name,string_video_drivers,audio_new_driver_name,string_audio_drivers,
 		directorio_actual,
-
-#if defined(__APPLE__)
-		macos_path_to_executable,
-#endif
-
+        zesarux_path_location,
         os_release_name,
 		hora_inicio,
 		uptime_seconds,uptime_seconds/60,mensaje_total_uptime,mensaje_cpu_usage);
