@@ -1278,39 +1278,6 @@ void clear_shift_z88(void)
 
 
 
-//Abre un archivo en solo lectura buscandolo en las rutas:
-//1) ruta actual
-//2) ../Resources/
-//3) INSTALLPREFIX/
-//normalmente usado para cargar roms
-//modifica puntero FILE adecuadamente
-void old_open_sharedfile(char *archivo,FILE **f)
-{
-        char buffer_nombre[1024];
-	strcpy(buffer_nombre,archivo);
-
-        //ruta actual
-        debug_printf(VERBOSE_INFO,"Looking for file %s at current dir",buffer_nombre);
-        *f=fopen(buffer_nombre,"rb");
-
-        //sino, en ../Resources
-        if (!(*f)) {
-                sprintf(buffer_nombre,"../Resources/%s",archivo);
-                debug_printf(VERBOSE_INFO,"Looking for file %s",buffer_nombre);
-                *f=fopen(buffer_nombre,"rb");
-
-                //sino, en INSTALLPREFIX/share/zesarux
-                if (!(*f)) {
-                        sprintf(buffer_nombre,"%s/%s/%s",INSTALL_PREFIX,"/share/zesarux/",archivo);
-                        debug_printf(VERBOSE_INFO,"Looking for file %s",buffer_nombre);
-                        *f=fopen(buffer_nombre,"rb");
-                }
-        }
-
-
-}
-
-
 //Busca un archivo o carpeta buscandolo en las rutas:
 //1) ruta actual
 //2) ../Resources/
@@ -1339,6 +1306,13 @@ int find_sharedfile(char *archivo,char *ruta_final)
                         sprintf(buffer_nombre,"%s/%s/%s",INSTALL_PREFIX,"/share/zesarux/",archivo);
                         debug_printf(VERBOSE_INFO,"Looking for file %s",buffer_nombre);
                         existe=si_existe_archivo(buffer_nombre);
+
+                        //sino, en ruta donde está el binario de ZEsarUX que se ha ejecutado
+                        if (!existe && zesarux_path_location[0]) {
+                            sprintf(buffer_nombre,"%s/%s",zesarux_path_location,archivo);
+                            debug_printf(VERBOSE_INFO,"Looking for file %s",buffer_nombre);
+                            existe=si_existe_archivo(buffer_nombre);
+                        }
                 }
         }
 
@@ -1351,11 +1325,7 @@ int find_sharedfile(char *archivo,char *ruta_final)
 }
 
 
-//Abre un archivo en solo lectura buscandolo en las rutas:
-//1) ruta actual
-//2) ../Resources/
-//3) INSTALLPREFIX/
-//normalmente usado para cargar roms
+//Abre un archivo en solo lectura buscandolo en las rutas de sharedfiles
 //modifica puntero FILE adecuadamente
 void open_sharedfile(char *archivo,FILE **f)
 {
@@ -1410,6 +1380,13 @@ void open_sharedfile_write(char *archivo,FILE **f)
                         sprintf(buffer_nombre,"%s/%s/%s",INSTALL_PREFIX,"/share/zesarux/",archivo);
                         debug_printf(VERBOSE_INFO,"Looking for file %s",buffer_nombre);
                         open_sharedfile_write_open(buffer_nombre,f);
+
+                        //sino, en ruta donde está el binario de ZEsarUX que se ha ejecutado
+                        if (!(*f)) {
+                                sprintf(buffer_nombre,"%s/%s",zesarux_path_location,archivo);
+                                debug_printf(VERBOSE_INFO,"Looking for file %s",buffer_nombre);
+                                open_sharedfile_write_open(buffer_nombre,f);
+                        }
                 }
         }
 
